@@ -1853,8 +1853,8 @@ static char *FldstatHelp[] = {
 
 static char *ZonstatHelp[] = {
     "NAME",
-    "    zonmin, zonmax, zonsum, zonmean, zonavg, zonvar, zonstd, zonpctl - ",
-    "    Zonal statistical values",
+    "    zonmin, zonmax, zonsum, zonmean, zonavg, zonstd, zonstd1, zonvar, zonvar1, ",
+    "    zonpctl - Zonal statistical values",
     "",
     "SYNOPSIS",
     "    <operator>  ifile ofile",
@@ -1877,10 +1877,14 @@ static char *ZonstatHelp[] = {
     "             For every latitude the mean over all longitudes is computed.",
     "    zonavg   Zonal average",
     "             For every latitude the average over all longitudes is computed.",
-    "    zonvar   Zonal variance",
-    "             For every latitude the variance over all longitudes is computed.",
     "    zonstd   Zonal standard deviation",
-    "             For every latitude the standard deviation over all longitudes is computed.",
+    "             For every latitude the standard deviation over all longitudes is computed. Divisor is n. ",
+    "    zonstd1  Zonal standard deviation",
+    "             For every latitude the standard deviation over all longitudes is computed. Divisor is (n-1). ",
+    "    zonvar   Zonal variance",
+    "             For every latitude the variance over all longitudes is computed. Divisor is n.",
+    "    zonvar1  Zonal variance",
+    "             For every latitude the variance over all longitudes is computed. Divisor is (n-1).",
     "    zonpctl  Zonal percentiles",
     "             For every latitude the pth percentile over all longitudes is computed.",
     "",
