@@ -3,6 +3,11 @@
 	* using CDI library version 1.7.0
 	* Version 1.7.0 released
 
+2015-05-26  Uwe Schulzweida
+
+	* New operator: zonstd1  - Zonal standard deviation [Divisor is (n-1)]
+	* New operator: zonvar1  - Zonal variance [Divisor is (n-1)]
+
 2015-05-22  Uwe Schulzweida
 
 	* New operator: yseasvar1  - Multi-year seasonally variance [Divisor is (n-1)]
